<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        >
        
        <Button android:id="@+id/new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_playlist"
            style="?android:attr/buttonBarButtonStyle"
            />
        
        <Button android:id="@+id/load_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_playlist"
            style="?android:attr/buttonBarButtonStyle"
            />
        
        <Button android:id="@+id/save_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_playlist"
            style="?android:attr/buttonBarButtonStyle"
            />
        
    </LinearLayout>
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <TableRow>
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_name"
                />
            
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_name"
                />
        </TableRow>
        
        <TableRow android:id="@+id/list_table">
            
        </TableRow>
        
    </TableLayout>

</RelativeLayout>
